# aacp-crewai

./: README.md  pyproject.toml
aacp_crewai/: __init__.py  agent.py  baseline_crew.py  crew.py  packet_bus.py
aacp_crewai/agents/: __init__.py  cs_agent.py  finance_agent.py  hr_agent.py  it_agent.py  sales_agent.py
aacp_crewai/workflows/: __init__.py  department_day.py
data/: budgets_2026-03.csv  employees_2026-03.csv  leads_2026-03.csv  new_hires_2026-03.csv  payroll_rules.json  tickets_2026-03.csv
examples/: comparison.py  department_comparison.py  quickstart.py
output/: audit_aacp_dept.jsonl  crewai_dept_comparison_20260605_115858.json
tests/: test_packet_bus.py
