[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aacp-crewai"
version = "0.1.0"
description = "AACP coordination layer for CrewAI multi-agent workflows"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrew Mackay" }]
keywords = ["aacp", "crewai", "agents", "multi-agent", "coordination", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "aacp>=1.3.0",
    "crewai>=0.70.0",
]

[project.optional-dependencies]
all = ["crewai[tools]>=0.70.0"]

[project.urls]
Homepage   = "https://aacp.dev"
Repository = "https://github.com/MackayAndrew/aacp-crewai"
"AACP SDK" = "https://github.com/MackayAndrew/aacp"

[tool.setuptools.packages.find]
where   = ["."]
include = ["aacp_crewai*"]
